--- a/index.html
+++ b/index.html
@@ -57,15 +57,20 @@
 
     </section>
     <section class="education">
+
        <div class="sectionedu">
-        <img class="logo_universidad" src="img/industrial.png" alt="Logo Universidad">
-        <h4>Escuela Industrial D.F Sarmiento</h4>
-        <br>
-        <h6 style="inline-block">Titulo:</h6><h6 style="inline-block">Técnico Electromecánico</h6>
-        <br>
-        <h6>Año:</h6>
-        <h6>2010</h6>
-         </div>
+           <div class="infoedu">
+
+                <img class="logo_universidad" src="img/industrial.png" alt="Logo Universidad">
+                <h4>Escuela Industrial D.F Sarmiento</h4>
+                <br>
+                <h6>Titulo:</h6><h6>Técnico Electromecánico</h6>
+                <br>
+                <h6>Año:</h6>
+                <h6>2010</h6>
+           </div>
+            </div>
+         
         
     </section>
     <div class="skills">
@@ -85,11 +90,13 @@
         <a>Enlace Proyecto</a>
     </section>
 </div>
-</section>
-</div>
-<footer>Todos los derechos reservados 2022</footer>
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-</body>
+    </div>
+    </section>
+    </div>
+    </section>
+    <footer>Todos los derechos reservados 2022</footer>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    </body>
 
 </html>
